--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,9 @@ go.work.sum
 
 # env file
 .env
+
+# Ignore Visual Studio Code settings
+.vscode/
+
+# Ignore binary files
+content-moderation-service
